# turing

./: .gitignore  CMakeLists.txt  README.md  analyze.cpp  analyze2.cpp  analyze3.cpp  antihydra.cpp  bananabeaver.cpp  compile_flags.txt  dbg.hpp  detect_period.cpp  detect_period.hpp  detect_period3.cpp  detect_period_batch.cpp  distinct_helper.cpp  enumerate.cpp  enumerate2.cpp  enumerate_naive.cpp  pch.hpp  run  run.cpp  run.ps1  run2.cpp  simulate.cpp  tape_growth.cpp  tape_size.cpp  test.cpp  test_performance.cpp  tmcompiler.cpp  transcript.cpp  turing.hpp  turing_machines_old.cpp
decide/: CMakeLists.txt  bouncer.cpp  bouncer.hpp  bouncer_batch.cpp  cycler.cpp  tcycler.cpp  tcycler.hpp  tcycler_batch.cpp
specific/: CMakeLists.txt  fractal.cpp  fractal2.cpp  p17620.cpp  sp4.cpp
test/: CMakeLists.txt  basic.cpp  common.hpp  decide_bouncer.cpp  decide_tcycler.cpp  detect_period.cpp  lnf.cpp  performance_simulate.cpp  tests_common.hpp
